[metadata]
name = roland-piano-erikvraalte
version = 0.1.0
author = Erik van Raalte
author_email = erik.vanraalte94@gmail.com
description = A library to interface with Roland FP pianos over midi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evanraalte/RolandPiano
project_urls =
    Bug Tracker = https://github.com/evanraalte/RolandPiano/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = roland_piano
python_requires = >=3.7
install_requires = 
    mido
    python-rtmidi
    debugpy
[options.packages.find]
where = src